<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.AddBookActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/addBookActivityImageView"
                android:layout_width="240dp"
                android:layout_height="300dp"
                android:onClick="selectImage"
                android:src="@drawable/selectimage" />

            <EditText
                android:id="@+id/addBookActivityBookNameEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/bookNameEditTextHint"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/addBookActivityBookAuthorEditText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:hint="@string/bookAuthorEditTextHint"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/addBookActivityBookSummaryEditText"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:hint="@string/bookSummaryEditTextHint"
                android:inputType="textMultiLine"
                android:textAlignment="center" />

            <Button
                android:id="@+id/addBookActivitySaveBTN"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:enabled="false"
                android:onClick="saveBook"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>