<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@color/bookItemColor">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:id="@+id/bookItemImageViewBookImage"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/bookName"
            android:id="@+id/bookItemTextViewBookName"
            android:textSize="16sp"
            android:textColor="@color/bookItemTextColor"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/bookAuthor"
            android:id="@+id/bookItemTextViewBookAuthor"
            android:textSize="16sp"
            android:textColor="@color/bookItemTextColor"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/bookSummary"
            android:id="@+id/bookItemTextViewBookSummary"
            android:textSize="16sp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textColor="@color/bookItemTextColor" />

    </LinearLayout>

</LinearLayout>